# docScanner

./: .gitignore  CMakeLists.txt  README.md  a.out  compile_commands.json  gtKDoc.h  gtkDoc.h  gtk_scandoc.cc  gtk_scandoc.h  gui.cc  image  int.cpp  main.cc  oCV.h  ocv_scandoc.cc  ocv_scandoc.h
.cache/clangd/index/: hello.cc.A41D5ECC287BD02F.idx  main.cc.B892669D6E9467A3.idx
extras/: image
